[gd_scene load_steps=5 format=3 uid="uid://chv3cbnf3ni76"]

[ext_resource type="Script" path="res://frontend/animations/rain_of_fire.gd" id="1_2ufpc"]
[ext_resource type="Texture2D" uid="uid://du5w45uew82x3" path="res://frontend/props/rain_of_fire.png" id="1_ti2gh"]
[ext_resource type="AudioStream" uid="uid://iii7vs54pywn" path="res://frontend/props/SFX/fire_burst.wav" id="3_twmqr"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uycak"]
emission_shape = 3
emission_box_extents = Vector3(10, 15, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="RainofFire" type="Node2D"]
position = Vector2(283, 113)
script = ExtResource("1_2ufpc")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 150
process_material = SubResource("ParticleProcessMaterial_uycak")
texture = ExtResource("1_ti2gh")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_twmqr")

[node name="StopSpawn" type="Timer" parent="."]
wait_time = 1.5

[node name="DetachTimer" type="Timer" parent="."]

[connection signal="timeout" from="StopSpawn" to="." method="_on_stop_spawn_timeout"]
[connection signal="timeout" from="DetachTimer" to="." method="_on_detach_timer_timeout"]
